# lobe-chat

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.database  docker-compose.yml  init_data.json  zitadel-config.yaml  zitadel-init-steps.yaml
data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
data/base/16384/: 1247  1247_fsm  1249  1249_fsm  1255  1259  1259_fsm  1259_vm  16387  16388  16389  16390  16393  16394  16396  16398  16401  16406  16407  16408  16410  16417  16419  16420  16421  16422  16423  16424  16426  16430  16431  16432  16433  16437  16440  16441  16442  16444  16445  16446  (+345 more)
data/base/16385/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  16389  16396  16399  16407  16424  16432  16436  16442  16452  16454  (+581 more)
data/base/16387/: 112  113  1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13405  13406  13406_fsm  13406_vm  (+616 more)
data/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
data/pg_subtrans/: 0000  0001
data/pg_xact/: 0000
docker-compose/local/: docker-compose.yml
plugins/project-vi/: Dockerfile  requirements.txt
plugins/project-vi/api/backup/2024-12-12_18-17-11/: pyproject.toml
s3_data/.minio.sys/: format.json
src/const/: branding.ts
(+1038 files in other folders)
