[project]
name = "mcp-memory"
version = "0.1.0"
description = "Enhanced memory system for Claude Desktop"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-memory = "mcp_memory.server:main"